fix scrolling overlap

--- a/src/_scss/elements/_table.scss
+++ b/src/_scss/elements/_table.scss
@@ -51,6 +51,7 @@ table {
             border: none;                
             padding: rem(16);
             margin: auto rem(8);
+            top: 50px;
             
             .expaned-table-container__outer-cell {
                 border: rem(1) solid $gray-cool-10;
